Signed-off-by: lingme <kid--l@hotmail.com>

--- a/VideoStateAxis.csproj
+++ b/VideoStateAxis.csproj
@@ -53,6 +53,7 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BoolConveterVisibility.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
